--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Movie Reviews", root_path, class: "navbar-brand" %>
+      <%= link_to "Movie Reviews", root_path, class: "navbar_title" %>
     </div>
 
     
@@ -16,11 +16,11 @@
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
         
-          <li><%= link_to "New Movie", new_movie_path, class: "active" %></li>
-          <li><%= link_to "Account", edit_user_registration_path %></li>
+          <li><%= link_to "New Movie", new_movie_path, class: "navbar_element" %></li>
+          <li><%= link_to "Account", edit_user_registration_path, class: "navbar_element" %></li>
         <% else %>
-          <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
-          <li><%= link_to "Sign in", new_user_session_path, class: "active"%></li>
+          <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar_element" %></li>
+          <li><%= link_to "Sign in", new_user_session_path, class: "navbar_element"%></li>
         <% end %>
       </ul>
       <%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
