--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @movie, html: { multipart: true } do |f| %>
+<%= bootstrap_form_for(@movie, layout: :horizontal, label_col: "col-sm-0", control_col: "col-sm-4", html: { multipart: true }) do |f| %>
   <% if @movie.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
@@ -12,30 +12,22 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, hide_label: true, placeholder: "Title" %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_area :description, hide_label: true, placeholder: "Description" %>
   </div>
   <div class="field">
-    <%= f.label :movie_length %><br>
-    <%= f.text_field :movie_length %>
+    <%= f.text_field :movie_length, hide_label: true, placeholder: "Movie Length in Min" %>
   </div>
   <div class="field">
-    <%= f.label :director %><br>
-    <%= f.text_field :director %>
+    <%= f.text_field :director, hide_label: true, placeholder: "Director" %>
   </div>
+  <div class="form_title">Set a Movie Poster</div>
   <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.text_field :rating %>
-  </div>
-  <div class="field">
-    <%= f.label :image %><br>
-    <%= f.file_field :image %>
+    <%= f.file_field :image, hide_label: true, class: "btn btn-default"%>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Post Movie", class: "btn btn-primary" %>
   </div>
 <% end %>
