--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,6 +11,9 @@
         <div class="thumbnail">
           <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
         </div>
+        <div class="movie-title">
+          <link_to movie.title, movie>
+        </div>
       </div>
     <% end %>
 </div>
