--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@movie, @review]) do |f| %>
+<%= bootstrap_form_for([@movie, @review]) do |f| %>
   <% if @review.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -14,9 +14,9 @@
   <div class="field">
     <div id="star-rating"></div>
   </div>
+  <br/>
   <div class="field">
-    <%= f.label :comment %><br>
-    <%= f.text_area :comment %>
+    <%= f.text_area :comment, hide_label: true, placeholder: "Critique" %>
   </div>
   <div class="actions">
     <%= f.submit %>
