--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
-<h2>Forgot your password?</h2>
+<h2 class="form_title">Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, layout: :horizontal, label_col: "col-sm-0", control_col: "col-sm-4") do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
