--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Movie Reviews", root_path, class: "navbar_title" %>
+      <%= link_to "Movie Launch", root_path, class: "navbar_title" %>
     </div>
 
     
