--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,18 +2,45 @@
   <div class="jumbotron">
     <h1>The Latest Releases Reviewed</h1>
     <p>Find out what the people are saying about the latest film and become part of the mob.</p>
-    <p><%= link_to "Sign up to write a Review", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+    <p><%= link_to "Sign up to write a Review", new_user_registration_path, class: "btn btn-success btn-lg" %></p>
   </div>
+<% else%>
+  <%= render 'carousel' %>
 <% end %>
-<div class="row">
-    <% @movies.each do |movie| %>
+<br/>
+<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Releases</h1>
+<ul id="menu">
+  <li class="sub">
+    <%@movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
           <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
         </div>
-        <div class="movie-title">
-          <link_to movie.title, movie>
+      </div>
+    <% end %>
+  </li>
+</ul>
+<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Releases</h1>
+<ul id="menu">
+  <li class="sub">
+    <%@movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
         </div>
       </div>
     <% end %>
-</div>
+  </li>
+</ul>
+<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Releases</h1>
+<ul id="menu">
+  <li class="sub">
+    <%@movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+        </div>
+      </div>
+    <% end %>
+  </li>
+</ul>
