Added avatar picture to users and set it alongside the comments, allowed users to delete and edit only their own comments, and applied some miscelleneous styling.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -89,3 +89,25 @@ text-align:left;
 li{
 display:inline-block;
 }
+
+.review_avatar {
+	width: 20%; 
+	height: 50%; 
+	float:left;
+}
+.review_rating {
+	width: 60%; 
+	height: 50%; 
+	float:left;
+}
+
+.review_button {
+	width: 20%; 
+	height: 80%; 
+	float:left; 
+}
+.purple {
+	color: purple;
+	font-family: Baskerville;
+}
+
