--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,7 +2,7 @@
   <div class="jumbotron">
     <h1>The Latest Releases Reviewed</h1>
     <p>Find out what the people are saying about the latest film and become part of the mob.</p>
-    <p><%= link_to "Sign up to write a Review", new_user_registration_path, class: "btn btn-success btn-lg" %></p>
+    <p><%= link_to "Sign up to write a Review", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
   </div>
 <% else%>
   <%= render 'carousel' %>
