--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,6 +23,10 @@
     <%= f.password_field :current_password,  hide_label: true, placeholder: "Current Password", autocomplete: "off" %>
   </div>
 
+  <div class="field">
+    <%= f.file_field :avatar, hide_label: true, class: "btn btn-default"%>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update", class: "btn btn-primary" %>
   </div>
