--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,10 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", hide_label: true, placeholder: "Password Confirmation" %>
   </div>
 
+  <div class="field">
+    <%= f.file_field :avatar, hide_label: true, class: "btn btn-default"%>
+  </div>
+
   <div class="actions">
     <%= f.submit "Join!" %>
   </div>
