--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,26 +7,27 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
       </button>
       <%= link_to "Movie Launch", root_path, class: "navbar_title" %>
     </div>
 
-    
+
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
         
-          <li><%= link_to "New Movie", new_movie_path, class: "navbar_element" %></li>
-          <li><%= link_to "Account", edit_user_registration_path, class: "navbar_element" %></li>
+          <li><%= link_to "New Movie", new_movie_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li><%= link_to "Account", edit_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
         <% else %>
-          <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar_element" %></li>
-          <li><%= link_to "Sign in", new_user_session_path, class: "navbar_element"%></li>
+          <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li><%= link_to "Sign in", new_user_session_path, class: "navbar_element", style: "color: purple;"%></li>
         <% end %>
       </ul>
       <%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
         <p>
           <%= text_field_tag :search, params[:search], class: "form-control" %>
-          <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
+          <%= submit_tag "Search", name: nil, class: "btn btn-primary" %>
         </p>
       <% end %>
     </div>
