Mapped movies to show on the root according to genre and where they are new releases. Also allowed the users to set this values during posting a new movie and editing.

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -23,8 +23,9 @@
   <div class="field">
     <%= f.text_field :director, hide_label: true, placeholder: "Director" %>
   </div>
-  <div class="form_title">Set a Movie Poster</div>
-  <div class="field">
+  <%= f.select(:genre, ['Comedy', 'Romance', 'Action', 'Animated'], hide_label: true,include_blank: "Choose a genre") %>
+  <%= f.select(:new_release, [['Yes!', true], ['No', false]], hide_label: true,include_blank: "New Release?") %>
+  <div>
     <%= f.file_field :image, hide_label: true, class: "btn btn-default"%>
   </div>
   <div class="actions">
