--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -11,7 +11,7 @@
 <h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Releases</h1>
 <ul id="menu">
   <li class="sub">
-    <%@movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
+    <%@new_releases.sort_by{|t| - t.created_at.to_i}.first(8).each do |movie|%>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
           <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
@@ -20,10 +20,10 @@
     <% end %>
   </li>
 </ul>
-<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Releases</h1>
+<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Action</h1>
 <ul id="menu">
   <li class="sub">
-    <%@movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
+    <%@action_movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
           <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
@@ -32,10 +32,10 @@
     <% end %>
   </li>
 </ul>
-<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Releases</h1>
+<h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Romance</h1>
 <ul id="menu">
   <li class="sub">
-    <%@movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
+    <%@romance_movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
           <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
