--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -23,6 +23,7 @@
             </tbody>
           </table>
           <%= link_to "Write a Review", new_movie_review_path(@movie), class: "btn btn-primary" %>
+          <%= link_to "Edit Movie", edit_movie_path(@movie), class: "btn btn-default" %>
         </div>
       </div>
       <div class="col-md-7 col-md-offset-1">
