Fixed the root paths to movie categories, added more fixtures and styled links.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,19 @@
 	text-decoration: none;
 }
 
+
+
+.index_urls{
+	font-size: 34px;
+	color: white;
+	font-family: Baskerville;
+
+}
+.index_urls:hover {
+	color:blue;
+	text-decoration: none;
+}
+
 .navbar_element {
 	font-size: 19px;
 }
