--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,3 +1,5 @@
+
+
 <% if !user_signed_in? %>
   <div class="jumbotron">
     <h1>The Latest Releases Reviewed</h1>
@@ -10,52 +12,54 @@
 <br/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "New Releases", "/new_releases", class: "index_urls"%>
-<ul id="menu">
-  <li class="sub">
-    <%@new_releases.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
-      <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
-        </div>
+<ul class="slider5" id="menu">
+  <%@new_releases.each do |movie|%>
+    <li class="sub">
+      <div class="thumbnail">
+        <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
       </div>
-    <% end %>
-  </li>
+    </li>
+  <% end %>
 </ul>
+
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "Action", "/action", class: "index_urls"%>
-<ul id="menu">
-  <li class="sub">
-    <%@action_movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
-      <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
-        </div>
+<ul class="slider5" id="menu">
+  <%@action_movies.each do |movie|%>
+    <li class="sub">
+      <div class="thumbnail">
+        <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
       </div>
-    <% end %>
-  </li>
+    </li>
+  <% end %>
 </ul>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "Romance", "/romance", class: "index_urls"%>
-<ul id="menu">
-  <li class="sub">
-    <%@romance_movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
-      <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
-        </div>
+<ul class="slider5" id="menu">
+  <%@romance_movies.each do |movie|%>
+    <li class="sub">
+      <div class="thumbnail">
+        <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
       </div>
-    <% end %>
-  </li>
+    </li>
+  <% end %>
 </ul>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "Animated", "/animated", class: "index_urls"%>
-<ul id="menu">
-  <li class="sub">
-    <%@animated_movies.sort_by{|t| - t.created_at.to_i}.first(4).each do |movie|%>
-      <div class="col-sm-6 col-md-3">
-        <div class="thumbnail">
-          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
-        </div>
+<ul class="slider5" id="menu">
+  <%@animated_movies.each do |movie|%>
+    <li class="sub">
+      <div class="thumbnail">
+        <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
       </div>
-    <% end %>
-  </li>
+    </li>
+  <% end %>
 </ul>
+
+<script>
+  $('.slider5').bxSlider({
+    minSlides: 3,
+    maxSlides: 6,
+    slideWidth: 200,
+    infiniteLoop: false
+  });
+</script>
