Added dropdown to navbar, styled profile page, added conditional that displays a centain picture according to the review average of a movie

--- a/app/views/movies/_carousel.html.erb
+++ b/app/views/movies/_carousel.html.erb
@@ -5,27 +5,27 @@
     <div class="item active">
       <%= image_tag('space.jpg')%>
       <div class="carousel-caption">
-        <h1 align="left">We need more star fuel!</h1>
+        <h1 align="left" class="index_urls">We need more star fuel!</h1>
         <p align="left">There are never enough films to review. Help us by adding your movies you love and the ones you love to hate.</p>
-        <div align="left"><a class="btn btn-large btn-success" href="movies/new">Add Movie</a></div>
+        <div align="left"><a class="btn btn-large btn-danger" href="movies/new">Add Movie</a></div>
         <br/><br/>
       </div>
     </div>
     <div class="item">
       <%= image_tag('space.jpg')%>
       <div class="carousel-caption">
-        <h1 align="left">We need more star fuel!</h1>
+        <h1 align="left" class="index_urls">We need more star fuel!</h1>
         <p align="left">There are never enough films to review. Help us by adding your movies you love and the ones you love to hate.</p>
-        <div align="left"><a class="btn btn-large btn-success" href="movies/new">Add Movie</a></div>
+        <div align="left"><a class="btn btn-large btn-danger" href="movies/new">Add Movie</a></div>
         <br/><br/>
       </div>
     </div>
     <div class="item">
       <%= image_tag('space.jpg')%>
       <div class="carousel-caption">
-        <h1 align="left">We need more star fuel!</h1>
+        <h1 align="left" class="index_urls">We need more star fuel!</h1>
         <p align="left">There are never enough films to review. Help us by adding your movies you love and the ones you love to hate.</p>
-        <div align="left"><a class="btn btn-large btn-success" href="movies/new">Add Movie</a></div>
+        <div align="left"><a class="btn btn-large btn-danger" href="movies/new">Add Movie</a></div>
       </div>
   </div>
 
