--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,8 +20,10 @@
 .form_title {
 	color: white;
 }
+
+
 .navbar_title {
-	font-family: Impact;
+	font-family: 'impact';
 	color: purple;
 	font-size: 34px;
 	text-decorator:none;
@@ -34,16 +36,29 @@
 	text-decoration: none;
 }
 
+.star_title {
+	font-family: 'impact';
+	color: purple;
+	font-size: 25px;
+	text-decorator:none;
+	background: linear-gradient(180deg, purple 0%, #4B0082 70%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
 
+.star_image {
+	max-width: 400px;
+	min-width: 400px;
+}
 
 .index_urls{
 	font-size: 34px;
+	font-family: 'ArialRoundedMtBold';
 	color: white;
-	font-family: Baskerville;
 
 }
 .index_urls:hover {
-	color:blue;
+	color:purple;
 	text-decoration: none;
 }
 
@@ -124,6 +139,46 @@ display:inline-block;
 	font-family: Baskerville;
 }
 
+.btn-danger {
+  	border-color: #4B0082;
+  	background-color: linear-gradient(270deg, #4B0082 0%, purple 70%);
+  	background: linear-gradient(270deg, purple 0%, #4B0082 70%);
+
+}
+.btn-danger:hover { 
+	border-color: #4B0082;
+	background-color: purple;
+	background: linear-gradient(270deg, purple 0%, #4B0082 70%);
+	
+}
+.btn-warning {
+	border-color: #4B0082;
+	ackground-color: purple;
+	background: linear-gradient(220deg, #4B0082 0%, purple 70%);
+}
+
+.btn-warning:hover {
+	border-color: #4B0082;
+	ackground-color: purple;
+	background: linear-gradient(220deg, #4B0082 0%, purple 70%);
+}
+
+.btn-info {
+	border-color: #4B0082;
+	ackground-color: purple;
+	background: linear-gradient(320deg, #4B0082 0%, purple 70%);
+}
+
+.btn-info:hover {
+	border-color: #4B0082;
+	ackground-color: purple;
+	background: linear-gradient(320deg, #4B0082 0%, purple 70%);
+}
+
+.btn-default {
+	color: #4B0082;
+	font-weight: bold;
+}
 /** Slider **/
 
 .bx-wrapper {
@@ -136,6 +191,12 @@ display:inline-block;
 .bx-wrapper img {
 	max-width: 100%;
 	display: block;
+}
+
+textarea:focus, input:focus, input[type]:focus, .uneditable-input:focus {   
+    border-color: orange;
+    box-shadow: 0 1px 1px yellow inset, 0 0 8px orange;
+    outline: 0 none;
 }
 
 /** THEME
