--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,7 +40,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update", class: "btn btn-primary" %>
+    <%= f.submit "Update", class: "btn btn-danger" %>
   </div>
 <% end %>
 
