--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,9 @@
   <div class="container">
   
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <button type="button" class="navbar-toggle collapsed btn-warning" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -16,18 +15,32 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-        
-          <li><%= link_to "New Movie", new_movie_path, class: "navbar_element", style: "color: purple;" %></li>
-          <li><%= link_to "Account", edit_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li><%= link_to "Add a Movie!", new_movie_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li><%= link_to "Profile", current_user, class: "navbar_element", style: "color: purple;" %></li>
         <% else %>
-          <li><%= link_to "Sign Up", new_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li><%= link_to "Sign Up!", new_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
           <li><%= link_to "Sign in", new_user_session_path, class: "navbar_element", style: "color: purple;"%></li>
         <% end %>
+        <li class="dropdown">
+          <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-danger">
+            Categories
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dLabel">
+            <li><%= link_to "New Releases", "/new_releases", style: "color: purple;"%></li>
+            <li><%= link_to "Action", "/action", style: "color: purple;"%></li>
+            <li><%= link_to "Romance", "/romance", style: "color: purple;"%></li>
+            <li><%= link_to "Animated", "/animated", style: "color: purple;"%></li>
+            <li><%= link_to "Comedy", "/comedy", style: "color: purple;"%></li>
+            
+          </ul>
+        </li>
       </ul>
+
       <%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
         <p>
           <%= text_field_tag :search, params[:search], class: "form-control" %>
-          <%= submit_tag "Search", name: nil, class: "btn btn-primary" %>
+          <%= submit_tag "Search", name: nil, class: "btn btn-warning" %>
         </p>
       <% end %>
     </div>
