--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <link href='http://www.fontspace.com/nimavisual/moonhouse?text=MovieLaunch&fontsize=55&foreground=000000&background=FFFFFF' rel='stylesheet' type='text/css'>
   <title>Moviefull</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
