--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,15 @@
-<ul>
-	<h1 class="form_title"><%= @user.username%></h2><br/>
-	<li><%= image_tag @user.avatar.url(:medium) %></li><br/><br/>
-	<h2 class="form_title">Biography</h2><br/>
-	<li class="form_title"><%= @user.biography%></li><br/><br/>
-	<h2 class="form_title">Favorite Flick</h2><br/>
-	<li class="form_title"><%= @user.favorite_movie %></li><br/><br/>
+<div class="panel panel-default">
+  	<div class="panel-body">
+		<ul>
+			<h1 class="navbar_title"><%= @user.username%></h2><br/>
+			<li><%= image_tag @user.avatar.url(:medium) %></li><br/><br/>
+			<h2 class="star_title">Biography</h2><br/>
+			<li><%= @user.biography%></li><br/><br/>
+			<h2 class="star_title">Favorite Flick</h2><br/>
+			<li><%= @user.favorite_movie %></li><br/><br/>
 
-	<li><%= link_to "Settings", edit_user_registration_path %></li><br/>
-	<li><%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
-</ul>
+			<li><%= link_to "Change", edit_user_registration_path, class: "btn btn-danger" %></li><br/>
+			<li><%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
+		</ul>
+	</div>
+</div>
