--- a/app/views/movies/_star_image.html.erb
+++ b/app/views/movies/_star_image.html.erb
@@ -19,6 +19,6 @@
 		<div class="star_title">White Giant</div>
 	<% else %>
 		<%= image_tag("blue_star.jpg", size: "200x200")%>
-		<div class="star_title">Blue Giant</div>
+		<div class="star_title">Blue Super Giant</div>
 	<% end %>
 </div>
