--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,13 +15,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-          <li><%= link_to "Add a Movie!", new_movie_path, class: "navbar_element", style: "color: purple;" %></li>
-          <li><%= link_to "Profile", current_user, class: "navbar_element", style: "color: purple;" %></li>
+          <li class="navbar_li"><%= link_to "Add a Movie!", new_movie_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li class="navbar_li"><%= link_to "Profile", current_user, class: "navbar_element", style: "color: purple;" %></li>
         <% else %>
-          <li><%= link_to "Sign Up!", new_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
-          <li><%= link_to "Sign in", new_user_session_path, class: "navbar_element", style: "color: purple;"%></li>
+          <li class="navbar_li"><%= link_to "Sign Up!", new_user_registration_path, class: "navbar_element", style: "color: purple;" %></li>
+          <li class="navbar_li"><%= link_to "Sign in", new_user_session_path, class: "navbar_element", style: "color: purple;"%></li>
         <% end %>
-        <li class="dropdown">
+        <li class="dropdown" style="padding: 10px">
           <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-danger">
             Categories
             <span class="caret"></span>
@@ -42,6 +42,9 @@
           <%= text_field_tag :search, params[:search], class: "form-control" %>
           <%= submit_tag "Search", name: nil, class: "btn btn-warning" %>
         </p>
+      <% end %>
+      <% if user_signed_in? %>
+        <p class="navbar-right" style="padding: 8px;"><%= link_to "Logout", destroy_user_session_path, method: "delete", class: "btn btn-default" %></p>
       <% end %>
     </div>
   </div>
