--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -53,6 +53,18 @@
   </ul>
 </div>
 <div style="text-align:center;">
+  <%= link_to "Comedy", "/comedy", class: "index_urls"%>
+  <ul class="slider5" id="menu">
+    <%@comedy_movies.each do |movie|%>
+      <li class="sub">
+        <div class="thumbnail">
+          <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+</div>
+<div style="text-align:center;">
   <%= link_to "Animated", "/animated", class: "index_urls"%>
   <ul class="slider5" id="menu">
     <%@animated_movies.each do |movie|%>
