--- a/app/views/movies/romance.html.erb
+++ b/app/views/movies/romance.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end %>
 <div style="text-align:center;">
-  <h1 class="form_title">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Romance</h1>
+  <h1 class="form_title" style="text-align:center;">Romance</h1>
   <ul id="menu">
     <li class="sub">
       <%@romance_movies.each do |movie|%>
