--- a/app/views/movies/animated.html.erb
+++ b/app/views/movies/animated.html.erb
@@ -11,7 +11,7 @@
     <li class="sub">
       <%@animated_movies.each do |movie|%>
         <div class="col-sm-6 col-md-3">
-          <div class="thumbnail">
+          <div>
             <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
           </div>
         </div>
@@ -19,3 +19,10 @@
     </li>
   </ul>
 </div>
+<%Movies.all.each do |movie|%>
+  <div class="col-sm-6 col-md-3">
+    <div>
+      <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+    </div>
+  </div>
+<% end %>
