added gem to make application compatible with Heroku, added username field to registration.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,7 +22,9 @@
   <div class="field">
     <%= f.password_field :current_password,  hide_label: true, placeholder: "Current Password", autocomplete: "off" %>
   </div>
-
+  <div class="field">
+    <%= f.text_field :username, hide_label: true, placeholder: "Username" %>
+  </div>
   <div class="field">
     <%= f.text_area :biography, hide_label: true, placeholder: "Tell Us about yourself" %>
   </div>
